Fixed spacing at bottom of registration and login pages

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -178,7 +178,7 @@ textarea {
     margin-top:10px;
 }
 
-.film-stats > .row button, p {
+.film-stats > .row button {
     padding-left:10px;
 }
 
@@ -331,4 +331,9 @@ td {
 
 #input-group-select {
     max-width : 20%;
+}
+
+.top-and-bottom {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
